ci(config): add mobile
enable mobile build

Ref: #1, #2, #3

--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -105,7 +105,9 @@ jobs:
         steps:
             - name: print
               run: echo ${{ needs.create-tag.outputs.tag-version }}
-  
+
+    ## REUSABLE WORKFLOW
+    ## RESUABLE WORKFLOW REQUIRED SECRETS WITH SAMPLE VALUE:
     call-send-email-tag-created:
           needs: create-tag
           permissions: write-all
