--- a/.github/workflows/util-create-app-release.yml
+++ b/.github/workflows/util-create-app-release.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           ref: ${{ steps.tag.outputs.tag }}
           token: ${{ secrets.PAT }}
-       
+
       - name: 🛠 Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -94,28 +94,28 @@ jobs:
       - name: Check Wrappid Version
         run: wrappid --version
 
-#       - name: Wrappid setup mobile
-#         run: |
-#           gh auth status
-#           echo Starting Setup.........................
-#           wrappid setup mobile --env=stage
+      - name: Wrappid setup mobile
+        run: |
+          gh auth status
+          echo Starting Setup.........................
+          wrappid setup mobile --env=stage
 
-#       - name: Setup JDK 11
-#         uses: actions/setup-java@v3
-#         with:
-#           java-version: '11'
-#           distribution: 'temurin'
-#           cache: gradle
-# #           cache-dependency-path: /.wrappid/runtime/mobile/android/
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
+#           cache-dependency-path: /.wrappid/runtime/mobile/android/
 
-#       - name: Change Permission of Gradle
-#         run: cd .wrappid/runtime/mobile/android/ && chmod +x gradlew
+      - name: Change Permission of Gradle
+        run: cd .wrappid/runtime/mobile/android/ && chmod +x gradlew
 
-#       - name: Build Wrappid android
-#         run: |
-#           gh auth status
-#           echo Starting Build.........................
-#           wrappid build android
+      - name: Build Wrappid android
+        run: |
+          gh auth status
+          echo Starting Build.........................
+          wrappid build android
 
       - name: Wrappid Setup Web
         run: |
@@ -189,16 +189,16 @@ jobs:
           asset_name: "web-v${{ steps.extract_version.outputs.version }}.zip"
           asset_content_type: application/zip
 
-      # - name: Upload Release Asset Android
-      #   id: upload-android-release-asset 
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.PAT }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-      #     asset_path: ./android-v${{ steps.extract_version.outputs.version }}.apk
-      #     asset_name: "android-v${{ steps.extract_version.outputs.version }}.apk"
-      #     asset_content_type: application/vnd.android.package-archive
+      - name: Upload Release Asset Android
+        id: upload-android-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./android-v${{ steps.extract_version.outputs.version }}.apk
+          asset_name: "android-v${{ steps.extract_version.outputs.version }}.apk"
+          asset_content_type: application/vnd.android.package-archive
 
       - name: Upload Release Asset Wrappid-Logs
         id: upload-log-release-asset 
