--- a/.github/workflows/utils-service-deploy-script.yml
+++ b/.github/workflows/utils-service-deploy-script.yml
@@ -40,7 +40,7 @@ jobs:
   call-send-email-deployed:
       needs: service-deploy
       permissions: write-all
-      uses: wrappid/workflows/.github/workflows/send-email-deploy.yml@main
+      uses: wrappid/workflows/.github/workflows/send-email-deploy.yml@v0.0.1
       secrets: inherit
       with:
         tag-version: ${{ needs.service-deploy.outputs.tag-version }}
