--- a/.github/workflows/util-create-tag.yml
+++ b/.github/workflows/util-create-tag.yml
@@ -11,7 +11,8 @@ on:
           type: string
         EMAIL_NOTIFY:
           required: true
-          type: boolean
+          type: string
+          default: "true"
      secrets:
         PAT:
           required: true
