--- a/.github/workflows/util-create-app-release.yml
+++ b/.github/workflows/util-create-app-release.yml
@@ -1,5 +1,37 @@
 on:
-    workflow_call:
+  workflow_call:
+      inputs:
+        GIT_USER_NAME:
+          required: true
+          type: string
+        TOOLKIT_VERSION:
+          required: true
+          type: string
+        VERSION_TYPE_REPOSITORY_DEFAULT:
+          required: false
+          type: string
+        EMAIL_NOTIFY:
+          required: true
+          type: string
+          default: "true"
+        EMAIL_SENDER_NAME:
+          required: false
+          type: string
+      secrets:
+        PAT:
+          required: true
+        GIT_USER_EMAIL:
+          required: true
+        WRAPPID_REGISTRY_TOKEN:
+          required: true
+  ## Below secrets are required if EMAIL_NOTIFY is TRUE
+        EMAIL_SERVER_ADDRESS:
+        EMAIL_SERVER_PORT:
+        EMAIL_USER_ID:
+        EMAIL_USER_PASSWORD:
+        EMAIL_TO:
+        EMAIL_CC:     ## Optional
+        EMAIL_BCC:    ## Optional
 
 name: Create App Release - CD
 
@@ -61,8 +93,8 @@ jobs:
       - name: 🛠 Setup gh and git
         run: |
           echo ${{secrets.PAT}} | gh auth login --with-token
-          git config user.name "${{ secrets.GHUSER_NAME }}"
-          git config user.email "${{ secrets.GHUSER_EMAIL }}"
+          git config user.name "${{ inputs.GIT_USER_NAME}}"
+          git config user.email "${{ secrets.GIT_USER_EMAIL }}"
 
 
 ## TODO
@@ -86,36 +118,35 @@ jobs:
          echo Installing Node Modules
          npm ci --omit-dev
 
-
-
       - name: Setup Wrappid
-        run: npm install -g @wrappid/toolkit@${{ secrets.TOOLKIT_VERSION }}
+        run: npm install -g @wrappid/toolkit@${{ inputs.TOOLKIT_VERSION }}
 
       - name: Check Wrappid Version
         run: wrappid --version
 
-      - name: Wrappid setup mobile
-        run: |
-          gh auth status
-          echo Starting Setup.........................
-          wrappid setup mobile --env=stage
+## COMMENTED ANDROID FOR QUICK CI TESTING
+#       - name: Wrappid setup mobile
+#         run: |
+#           gh auth status
+#           echo Starting Setup.........................
+#           wrappid setup mobile --env=stage
 
-      - name: Setup JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: gradle
-#           cache-dependency-path: /.wrappid/runtime/mobile/android/
+#       - name: Setup JDK 11
+#         uses: actions/setup-java@v3
+#         with:
+#           java-version: '11'
+#           distribution: 'temurin'
+#           cache: gradle
+# #           cache-dependency-path: /.wrappid/runtime/mobile/android/
 
-      - name: Change Permission of Gradle
-        run: cd .wrappid/runtime/mobile/android/ && chmod +x gradlew
+#       - name: Change Permission of Gradle
+#         run: cd .wrappid/runtime/mobile/android/ && chmod +x gradlew
 
-      - name: Build Wrappid android
-        run: |
-          gh auth status
-          echo Starting Build.........................
-          wrappid build android
+#       - name: Build Wrappid android
+#         run: |
+#           gh auth status
+#           echo Starting Build.........................
+#           wrappid build android
 
       - name: Wrappid Setup Web
         run: |
@@ -149,19 +180,14 @@ jobs:
       - name: Move Web zip to root
         run: mv build/web/web-v${{ steps.extract_version.outputs.version }}.zip web-v${{ steps.extract_version.outputs.version }}.zip
 
-      - name: Move apk to root
-        run: mv build/mobile/android/app-debug.apk android-v${{ steps.extract_version.outputs.version }}.apk
+      ## COMMENTED ANDROID FOR QUICK CI TESTING
+      # - name: Move apk to root
+      #   run: mv build/mobile/android/app-debug.apk android-v${{ steps.extract_version.outputs.version }}.apk
 
       - run: ls -l
 
       - name: Get wrappid logs
         run: cp $(npm root -g)/@wrappid/logs/logs.log wrappid-logs-v${{ steps.extract_version.outputs.version }}.log
-
-      # - name: Get tags
-      #   run: git fetch --tags origin
-
-      # - name: Create tag
-      #   run: git tag v${{ steps.extract_version.outputs.version }} && git push origin v${{ steps.extract_version.outputs.version }}
 
       - name: Generate Release notes
         run: curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/util-scripts/release_notes.sh | bash -s ${{ github.repository_owner }} ${{ github.event.repository.name }}
@@ -189,16 +215,17 @@ jobs:
           asset_name: "web-v${{ steps.extract_version.outputs.version }}.zip"
           asset_content_type: application/zip
 
-      - name: Upload Release Asset Android
-        id: upload-android-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./android-v${{ steps.extract_version.outputs.version }}.apk
-          asset_name: "android-v${{ steps.extract_version.outputs.version }}.apk"
-          asset_content_type: application/vnd.android.package-archive
+      ## COMMENTED ANDROID FOR QUICK CI TESTING
+      # - name: Upload Release Asset Android
+      #   id: upload-android-release-asset 
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.PAT }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+      #     asset_path: ./android-v${{ steps.extract_version.outputs.version }}.apk
+      #     asset_name: "android-v${{ steps.extract_version.outputs.version }}.apk"
+      #     asset_content_type: application/vnd.android.package-archive
 
       - name: Upload Release Asset Wrappid-Logs
         id: upload-log-release-asset 
@@ -211,7 +238,7 @@ jobs:
           asset_name: "wrappid-logs-v${{ steps.extract_version.outputs.version }}.log"
           asset_content_type: text/plain
 
-
+## TEST SNIPPET FOR TODO:
       # - name: 🚀 Create Release
       #   if: ${{ steps.check-tag.outputs.release-exists == 'failure' }}
       #   id: create_release
@@ -222,10 +249,17 @@ jobs:
 
   call-send-email-released:
       needs: create-release
+      if: ${{ inputs.EMAIL_NOTIFY }} == true
       permissions: write-all
       uses: wrappid/workflows/.github/workflows/send-email-released.yml@main
-      secrets: inherit
       with:
-        # email-to: "${{ secrets.IDS }}"
-        # email-cc: "${{ secrets.MAINTAINER_ID }}"
-        tag-version: ${{ needs.create-release.outputs.tag-version }}
+        tag-version: ${{ needs.create-tag.outputs.tag-version }}
+        EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
+      secrets:
+        EMAIL_SERVER_ADDRESS: ${{ secrets.EMAIL_SERVER_ADDRESS }}
+        EMAIL_SERVER_PORT: ${{ secrets.EMAIL_SERVER_PORT }}
+        EMAIL_USER_ID: ${{ secrets.EMAIL_USER_ID }}
+        EMAIL_USER_PASSWORD: ${{ secrets.EMAIL_USER_PASSWORD }}
+        EMAIL_TO: ${{ secrets.EMAIL_TO }}
+        EMAIL_CC: ${{ secrets.EMAIL_CC }}       ## Optional
+        EMAIL_BCC: ${{ secrets.EMAIL_BCC }}     ## Optional
