--- a/.github/workflows/utils-app-deploy-script.yml
+++ b/.github/workflows/utils-app-deploy-script.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           host: ${{ secrets.REMOTE_HOST }}       
           username: ${{ secrets.REMOTE_SSH_USER }}     
-          key: ${{ secrets.REMOTE_SSH_USER }}
+          key: ${{ secrets.REMOTE_SSH_KEY }}
           port: 22
           script: |
             sudo -u ec2-user curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/app-deploy.sh | bash -s ${{ github.repository_owner }} ${{ github.event.repository.name }}
