--- a/.github/workflows/utils-service-deploy-script.yml
+++ b/.github/workflows/utils-service-deploy-script.yml
@@ -2,11 +2,36 @@ name: Service Deploy - CD
 
 on:
   workflow_call:
+    inputs:
+      EMAIL_NOTIFY:
+        required: true
+        type: string
+        default: "true"
+      EMAIL_SENDER_NAME:
+        required: false
+        type: string
+    secrets:
+      PAT:
+        required: true
+      REMOTE_HOST:
+         required: true
+      REMOTE_SSH_KEY:
+         required: true
+      REMOTE_SSH_USER:
+         required: true
+## Below secrets are required if EMAIL_NOTIFY is TRUE
+      EMAIL_SERVER_ADDRESS:
+      EMAIL_SERVER_PORT:
+      EMAIL_USER_ID:
+      EMAIL_USER_PASSWORD:
+      EMAIL_TO:
+      EMAIL_CC:     ## Optional
+      EMAIL_BCC:    ## Optional
 
 jobs:
   service-deploy:
     runs-on: ubuntu-latest
-    name: Serivce Deploy
+    name: Service Deploy
     outputs:
       tag-version: ${{ steps.current-tag.outputs.tag }}
 
@@ -29,18 +54,26 @@ jobs:
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.AWS_STAGE_HOST }}       
-          username: ${{ secrets.AWS_STAGE_USER }}     
-          key: ${{ secrets.AWS_STAGE_SSH_KEY }}
+          host: ${{ secrets.REMOTE_HOST }}       
+          username: ${{ secrets.REMOTE_SSH_USER }}     
+          key: ${{ secrets.REMOTE_SSH_KEY }}
           port: 22
           script: |
-            curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/service-deploy.sh | bash -s ${{ github.repository_owner }} ${{ github.event.repository.name }}
-
+            sudo -u ec2-user curl -o- https://raw.githubusercontent.com/wrappid/workflows/main/deploy-scripts/service-deploy.sh | bash -s ${{ github.repository_owner }} ${{ github.event.repository.name }}
 
   call-send-email-deployed:
       needs: service-deploy
+      if: ${{ inputs.EMAIL_NOTIFY }} == true
       permissions: write-all
       uses: wrappid/workflows/.github/workflows/send-email-deploy.yml@main
-      secrets: inherit
+      secrets:
+        EMAIL_SERVER_ADDRESS: ${{ secrets.EMAIL_SERVER_ADDRESS }}
+        EMAIL_SERVER_PORT: ${{ secrets.EMAIL_SERVER_PORT }}
+        EMAIL_USER_ID: ${{ secrets.EMAIL_USER_ID }}
+        EMAIL_USER_PASSWORD: ${{ secrets.EMAIL_USER_PASSWORD }}
+        EMAIL_TO: ${{ secrets.EMAIL_TO }}
+        EMAIL_CC: ${{ secrets.EMAIL_CC }}       ## Optional
+        EMAIL_BCC: ${{ secrets.EMAIL_BCC }}     ## Optional
       with:
         tag-version: ${{ needs.service-deploy.outputs.tag-version }}
+        EMAIL_SENDER_NAME: ${{ inputs.EMAIL_SENDER_NAME }}
