feat(config): :wrench: add config to publish package and update email templates
add config to publish package and update email templates of tag, release, deploy and publish

Ref: # 1, #2, #3

--- a/.github/workflows/send-email-publish.yml
+++ b/.github/workflows/send-email-publish.yml
@@ -1,16 +1,78 @@
 name: Send Email - Published
-
 on:
-#   release:       # TRY WITH DEPLOY
-#     types: [created]
-    workflow_dispatch:
+  workflow_call:
+    inputs:
+      tag-version:
+        required: true
+        type: string
+      EMAIL_SENDER_NAME:      ## Optional
+        type: string
+    secrets:
+      EMAIL_SERVER_ADDRESS:
+        required: true
+      EMAIL_SERVER_PORT:
+        required: true
+      EMAIL_USER_ID:
+        required: true
+      EMAIL_USER_PASSWORD:
+        required: true
+      EMAIL_TO:
+        required: true
+      EMAIL_CC:               ## Optional
+      EMAIL_BCC:              ## Optional
 
 jobs:
-  build:
+  send-email:
+    name: Send Email
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Sender Name configure
+        id: sender-name
+        run: |
+          if [[ -n "${{ inputs.EMAIL_SENDER_NAME }}" ]]; then
+              echo "SENDER_NAME=${{ inputs.EMAIL_SENDER_NAME }}" >> $GITHUB_ENV
+          else
+              REPOSITORY_OWNER_NAME=${{ github.repository_owner }}
+              echo "SENDER_NAME=${REPOSITORY_OWNER_NAME^}" >> $GITHUB_ENV
+          fi
+
+      ## TODO: USE EMAIL TEMPLATES
+
+      - name: 📧 Send mail
+        uses: dawidd6/action-send-mail@v3
         with:
-          node-version: 16
-      - run: echo Hello World
+          server_address: ${{ secrets.EMAIL_SERVER_ADDRESS }}
+          server_port: ${{ secrets.EMAIL_SERVER_PORT }}
+          username: ${{ secrets.EMAIL_USER_ID }}
+          password: ${{ secrets.EMAIL_USER_PASSWORD }}
+          secure: true
+          from: ${{ env.SENDER_NAME }}
+          to: ${{ secrets.EMAIL_TO }}
+          cc: ${{ secrets.EMAIL_CC }}
+          bcc: ${{ secrets.EMAIL_BCC }}
+          subject: Published - ${{ github.event.repository.name }} - ${{ inputs.tag-version }}. 🚀
+          html_body: |
+            <html lang="en">
+
+            <head>
+              <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            </head>
+
+            <body style="font-size: 1rem;"">
+              <p>Hi Wrappiders 🕵🏽‍♂️,</p>
+
+              <p>
+                We have released a new package version of our ${{ github.event.repository.name }} project, ${{ steps.current-tag.outputs.tag }}. 🚀<br>
+                <br>
+                This version comes with some amazing new features and improvements that will make your experience even better.
+                You can check out the latest release details here https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/releases/tag/${{ inputs.tag-version }}.
+              </p>
+
+              <p>Thanks and Regards,<br>
+                ${{ env.SENDER_NAME }}</p>
+                <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "${{ github.workflow }}" GitHub Action. <br>Triggered by ${{ github.actor }} </footer>
+            </body>
+
+            </html>
+
