--- a/.github/workflows/send-email-released.yml
+++ b/.github/workflows/send-email-released.yml
@@ -70,7 +70,7 @@ jobs:
           
               <p>Thanks and Regards,<br>
               ${{ env.SENDER_NAME }}</p>
-              <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "${{ github.workflow }}" GitHub Action</footer>
+              <footer style="font-size: 0.8rem; color: #ccc; height: 30px; line-height: 30px;">Generate by "${{ github.workflow }}" GitHub Action. <br>Triggered by ${{ github.actor }}</footer>
             </body>
 
             </html>
